WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71289
Crash in PDF code when script has illegal UTF-8 or UTF-16 sequences
https://bugs.webkit.org/show_bug.cgi?id=71289
Summary
Crash in PDF code when script has illegal UTF-8 or UTF-16 sequences
Darin Adler
Reported
2011-11-01 09:12:06 PDT
Crash in PDF code when script has illegal UTF-8 or UTF-16 sequences
Attachments
Patch
(1.92 KB, patch)
2011-11-01 09:13 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-11-01 09:13:22 PDT
Created
attachment 113175
[details]
Patch
Darin Adler
Comment 2
2011-11-01 09:28:21 PDT
Comment on
attachment 113175
[details]
Patch Clearing flags on attachment: 113175 Committed
r98970
: <
http://trac.webkit.org/changeset/98970
>
Darin Adler
Comment 3
2011-11-01 09:28:24 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4
2011-11-01 09:56:53 PDT
Is it correct to only support UTF-8 and UTF-16 with BOM? Where should the encoding information come from?
Darin Adler
Comment 5
2011-11-01 10:46:31 PDT
(In reply to
comment #4
)
> Is it correct to only support UTF-8 and UTF-16 with BOM? Where should the encoding information come from?
That’s a good question, and it occurred to me too. But far, far less important than this bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug