third_party/WebKit/Source/WebKit/mac/WebView/WebPDFDocumentExtras.mm
@@ -90,7 +90,7 @@ NSArray *allScriptsInPDFDocument(PDFDocument *document)
     if (!CGPDFDictionaryGetDictionary(namesDictionary, "JavaScript", &javaScriptNameTree))
         return scripts;
 
-    // The names are aribtrary. We are only interested in the values.
+    // The names are arbitrary. We are only interested in the values.
     Vector<CGPDFObjectRef> objects;
     getAllValuesInPDFNameTree(javaScriptNameTree, objects);
     size_t objectCount = objects.size();
@@ -126,6 +126,9 @@ NSArray *allScriptsInPDFDocument(PDFDocument *document)
 
         NSStringEncoding encoding = (length > 1 && bytes[0] == 0xFE && bytes[1] == 0xFF) ? NSUnicodeStringEncoding : NSUTF8StringEncoding;
         NSString *script = [[NSString alloc] initWithBytes:bytes length:length encoding:encoding];
+        if (!script)
+            continue;
+
         [scripts addObject:script];
         [script release];
     }
